--- a/Index.html
+++ b/Index.html
@@ -1,52 +1,54 @@
 <html>
- <body>
- <h1>MI PRIMERA PAGINA WEB</h1>
+   <head>
+      <meta charset="UTF-8">
+   <h1>MI PRIMERA PAGINA WEB</h1>
 
- <h2>Este es el subtitulo</h2>
- <title>Mi primera pagina web</title>
- </head>
-</body>
-
- <p>
- Este es el primer parrafo con mi pagina web.<br>
- Estoy aprendiendo a programar en HTML.<br>
- Es muy interesante entender como funciona todo.<br>
- Cada linea es una parte de un mismo parrafo.<br>
- Estoy practicando la indentacion correctamente.<br>
- </p>
- 
- <br>
-
- <p>
- Este es el segundo parrafo con cinco lineas.<br>
- HTML ermite estructurar la informacion.<br>
- Los parrafos  se separan con la etiqueta <br>
- Es importante manteer un buen formato.<br>
- Esto facilita la lectura del codigo.<br>
- </p>
-
- <br>
-
- <p>
- Este es el tercer parrafo solicitado.<br>
- Tiene tambien cinco lineas de contenido.<br>
- Se esta cumpliendo con todos los requisitos.<br>
- Cada parrafo tiene separacion visibe.<br>
- La practica hace al maestro en programacion.<br>
- </p>
-
- <ul>
- <li>Aprender HTML es muy util.</li>
- <li>Debemos seguir buenas prcticas.</li>
- <li>Subiremos este proyeto a GitHub</li>
- </ul>
-
- <footer>
- <p>Microfost Emcarta Todos los derechos reservados - @Eison_Stiven_Ramirez_Vasquez - @3171084</p>
- </footer>
+  <h2>Este es el subtitulo</h2>
+  <title>Mi primera pagina web</title>
+  </head>
  </body>
 
-    <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
-<script src="https://files.bpcontent.cloud/2025/08/15/12/20250815120504-KVIJSMRA.js" defer></script>
+  <p>
+  Este es el primer parrafo con mi pagina web.<br>
+  Estoy aprendiendo a programar en HTML.<br>
+  Es muy interesante entender como funciona todo.<br>
+  Cada linea es una parte de un mismo parrafo.<br>
+  Estoy practicando la indentacion correctamente.<br>
+  </p>
+ 
+  <br>
+
+  <p>
+  Este es el segundo parrafo con cinco lineas.<br>
+  HTML ermite estructurar la informacion.<br>
+  Los parrafos  se separan con la etiqueta <br>
+  Es importante manteer un buen formato.<br>
+  Esto facilita la lectura del codigo.<br>
+  </p>
+
+  <br>
+
+  <p>
+  Este es el tercer parrafo solicitado.<br>
+  Tiene tambien cinco lineas de contenido.<br>
+  Se esta cumpliendo con todos los requisitos.<br>
+  Cada parrafo tiene separacion visibe.<br>
+  La practica hace al maestro en programacion.<br>
+  </p>
+
+  <ul>
+  <li>Aprender HTML es muy util.</li>
+  <li>Debemos seguir buenas prcticas.</li>
+  <li>Subiremos este proyeto a GitHub</li>
+  </ul>
+
+  <footer>
+  <p>Microfost Emcarta Todos los derechos reservados - @Eison_Stiven_Ramirez_Vasquez - @3171084</p>
+  </footer>
+  </body>
+
+     <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js"></script>
+    <script src="https://files.bpcontent.cloud/2025/08/15/12/20250815120504-KVIJSMRA.js" defer></script>
     
 </html>
+
