--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,7 @@
   <title>Mi primera pagina web</title>
   </head>
 
+   <body>
   <p>
   Este es el primer parrafo con mi pagina web.<br>
   Estoy aprendiendo a programar en HTML.<br>
@@ -49,5 +50,6 @@
     <script src="https://files.bpcontent.cloud/2025/08/15/12/20250815120504-KVIJSMRA.js" defer></script>
     
 </html>
+
 
 
